# End-to-End-ML-Project

./: main.py  pyproject.toml  schema.yaml  setup.py
artifacts/data_transformation/: test.csv  train.csv
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  data_ingestion.ipynb  experiement.ipynb  trials.ipynb
src/mlProject/components/: data_ingestion.py  data_transformation.py
src/mlProject/config/: configuration.py
src/mlProject/logging/: __init__.py
src/mlProject/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py
